# badger-multisig

./: .env.example  .gitignore  .gitmodules  README.md  ape_safe.py  brownie-config.yaml  generate_interface.py  hardhat.config.js  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements.txt
.github/workflows/: black.yml  codeql-analysis.yml
contracts/: AutonomousDripper.sol  DummyController.sol  EmissionsDripper.sol  GasStation.sol  GasStationExact.sol  IStrategy.sol  RemBadgerDripper.sol  StakingRewardsSignalOnly.sol
data/badger/: audit_owners.csv
great_ape_safe/: __init__.py  great_ape_safe.py
great_ape_safe/ape_api/: __init__.py  aave.py  anyswap.py  aura.py  badger.py  balancer.py  bunni.py  chainlink.py  compound.py  convex.py  cow.py  curve.py  curve_v2.py  euler.py  liquis.py  maker.py  opolis.py  pancakeswap_v2.py  rari.py  saddle.py  snapshot.py  solidly.py  spookyswap.py  sushi.py  uni_v2.py  uni_v3.py  univ3.py
great_ape_safe/api_safe/: aave.py  compound.py  opolis.py
helpers/: addresses.py  chaindata.json  chaindata.py  constants.py  utils.py
interfaces/: IWETH9.sol
interfaces/aave/: IStakedTokenV2Rev3.sol
interfaces/across_bridge/: IAcrossLP_v1.sol
interfaces/ampleforth/: IMedianOracle.sol
interfaces/anyswap/: IAnyswapV5ERC20.sol  IAnyswapV6Router.sol
interfaces/aragon/: IAgent.sol  IVoting.sol
interfaces/arbitrum/: ICrvGaugeFactory.sol  ICrvStrategy.sol  ICurveGauge.sol  INodeInterface.sol  IOutbox.sol
scripts/: example_farm_wbtc.py  migrate_bsc_msigs.py  pay_council.py
tests/: conftest.py
(+635 files in other folders)
